IDE code suggestions cleanup